<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2196F3"
    android:padding="5dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-medium"
        android:text="@string/text1"
        android:textColor="#090909"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="310dp"
        android:fontFamily="serif"
        android:text="@string/or"
        android:textColor="#090909"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="150dp"
        android:layout_marginRight="150dp"
        android:layout_marginBottom="150dp"
        android:background="#25E42D"
        android:fontFamily="sans-serif-medium"
        android:text="@string/signin"
        android:textColor="#0C0C0C"
        android:textSize="20sp" />

    <Button
        android:id="@+id/createacc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="250dp"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="350dp"
        android:layout_marginEnd="250dp"
        android:layout_marginRight="250dp"
        android:layout_marginBottom="250dp"
        android:background="#FF0101"
        android:fontFamily="sans-serif-medium"
        android:text="@string/createacc"
        android:textColor="#090909"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="289dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="135dp"
        android:autofillHints=""
        android:ems="12"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:visibility="visible"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="294dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="175dp"
        android:autofillHints=""
        android:ems="13"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:visibility="visible"
        tools:visibility="visible" />
</RelativeLayout>