<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    android:padding="5dp"
    tools:context=".loginPage">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-medium"
        android:text="@string/text1"
        android:textColor="#090909"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="310dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/or"
        android:textColor="#090909"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="270dp"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="240dp"
        android:textColor="#FFFFFF"
        android:background="#000000"
        android:fontFamily="sans-serif-medium"
        android:text="@string/signin"
        android:textSize="15sp" />

    <Button
        android:id="@+id/createacc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="240dp"
        android:fontFamily="sans-serif-medium"
        android:textColor="#FFFFFF"
        android:background="#000000"
        android:text="@string/createacc"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="294dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="135dp"
        android:autofillHints=""
        android:ems="12"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:visibility="visible"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="294dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="175dp"
        android:autofillHints=""
        android:ems="13"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:visibility="visible"
        tools:visibility="visible" />

    <Button
        android:id="@+id/forgotPawd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="350dp"
        android:textColor="#FFFFFF"
        android:background="#000000"
        android:text="Forgot password" />
</RelativeLayout>